--- a/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/config.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/config.html
@@ -1,14 +1,16 @@
 ﻿<div class="ng-cloak terratype" ng-controller="terratype" ng-init="initConfig()" ng-disabled="!loading">
-    <div class="umb-editor">
+    <div class="umb-el-wrap control-group">
         <label for="terratype_{{model.alias}}_provider" class="control-label">
             Map Provider:
             <small>
                 Select which system you wish to use to display maps
             </small>
         </label>
-        <select id="terratype_{{model.alias}}_provider" ng-model="model.value.provider.id" class="umb-editor" ng-change="setProvider(model.value.provider.id)">
-            <option ng-repeat="p in bag.providers" value="{{p.id}}">{{p.name}}</option>
-        </select>
+        <div class="controls">
+            <select id="terratype_{{model.alias}}_provider" ng-model="model.value.provider.id" class="umb-editor" ng-change="setProvider(model.value.provider.id)">
+                <option ng-repeat="p in bag.providers" value="{{p.id}}">{{p.name}}</option>
+            </select>
+        </div>
     </div>
     <br />
     <fieldset ng-show="bag.provider.id != null" style="padding-left:15px;">
@@ -20,23 +22,21 @@
         <p>{{bag.provider.description}}</p>
         <br />
         <section>
-            <h4 style="background-color:#dfdfdf;padding:5px 0;">
+            <h4 style="background-color:#dfdfdf;padding: 5px 0 5px 5px;margin-left:-5px;">
                 Configure
             </h4>
-            <div class="umb-editor">
+            <div class="umb-el-wrap control-group">
                 <label for="terratype_{{model.alias}}_coordinatesystem" class="control-label">
                     Coordinate System:
                     <small>
                         Which Geodetic Coordinate System do you wish to use to present and store locations
                     </small>
                 </label>
-                <select id="terratype_{{model.alias}}_coordinatesystem" ng-model="model.value.position.id" class="umb-editor" ng-change="setCoordinateSystems(model.value.position.id)">
-                    <option ng-repeat="c in bag.provider.coordinateSystems" value="{{c.id}}">{{c.name}}</option>
-                </select>
-            </div>
-            <div class="umb-editor" ng-show="model.value.position.id != null">
-                <div style="margin-left:170px;margin-top:5px;">
-                    <small>
+                <div class="controls">
+                    <select id="terratype_{{model.alias}}_coordinatesystem" ng-model="model.value.position.id" class="umb-editor" ng-change="setCoordinateSystems(model.value.position.id)">
+                        <option ng-repeat="c in bag.provider.coordinateSystems" value="{{c.id}}">{{c.name}}</option>
+                    </select>
+                    <small ng-show="model.value.position.id != null">
                         <a href="{{bag.provider.position.referenceUrl}}" target="_blank">
                             {{bag.provider.position.description}}
                         </a>
@@ -48,17 +48,19 @@
             </ng-include>
         </section>
         <section>
-            <h4 style="background-color:#dfdfdf;padding:5px 0;">
+            <h4 style="background-color:#dfdfdf;padding: 5px 0 5px 5px;margin-left:-5px;">
                 Apperance
             </h4>
-            <div class="umb-editor">
+            <div class="umb-el-wrap control-group">
                 <label for="terratype_{{model.alias}}_height" class="control-label">
                     Height:
                     <small>
                         The height of the map as displayed to the content editor in pixels
                     </small>
                 </label>
-                <input type="number" id="terratype_{{model.alias}}_height" ng-model="model.value.height" class="umb-editor" placeholder="Height of map in pixels" />
+                <div class="controls">
+                    <input type="number" id="terratype_{{model.alias}}_height" ng-model="model.value.height" class="umb-editor" placeholder="Height of map in pixels" />
+                </div>
             </div>
             <ng-include src="bag.provider.views.apperance" onload="bag.provider.apperanceSetup()">
             </ng-include>
@@ -81,4 +83,9 @@
     <textarea>
         {{model.value}}
     </textarea>
+    <br />
+    <br />
+    <br />
+    <br />
+
 </div>
